addresses changes in businessprocess module
changes syntax
adds statetype
adds parameter ordering

refs #13405

--- a/itl/plugins-contrib.d/icingacli.conf
+++ b/itl/plugins-contrib.d/icingacli.conf
@@ -22,26 +22,32 @@ template CheckCommand "icingacli" {
 }
 
 object CheckCommand "icingacli-businessprocess" {
-	import "icingacli"
+        import "icingacli"
 
-	command += [ "businessprocess", "check", "process" ]
+        command += [ "businessprocess", "process", "check" ]
 
-	arguments = {
-		"--config" = {
-			value = "$icingacli_businessprocess_config$"
-			description = "Configuration file containing your business process without file extension"
-		}
-		"--details" = {
-			set_if = "$icingacli_businessprocess_details$"
-			description = "Get details for root cause analyses"
-		}
-		"--process" = {
-			value = "$icingacli_businessprocess_process$"
-			description = "Business process to monitor"
-			skip_key = true
-			required = true
-		}
-	}
+        arguments = {
+                "--config" = {
+                        value = "$icingacli_businessprocess_config$"
+                        description = "Configuration file containing your business process without file extension"
+                }
+                "--details" = {
+                        set_if = "$icingacli_businessprocess_details$"
+                        description = "Get details for root cause analyses"
+                }
+                "--state-type" = {
+                        value = "$icingacli_businessprocess_statetype$"
+                        description = "Define which state type to look at. Could be either soft or hard, overrides an eventually configured default"
+                }
+                "--process" = {
+                        value = "$icingacli_businessprocess_process$"
+                        description = "Business process to monitor"
+                        skip_key = true
+                        required = true
+                        order = -1
+                }
+        }
 
-	vars.icingacli_businessprocess_details = false
+        vars.icingacli_businessprocess_details = false
 }
+
